# celery-webinars

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.py
app/: celery_app.py  celery_config.py  celeryconfig.py
app/domain/models/: user.py
app/schemas/: user.py
app/services/google_calendar/: api.py
app/services/google_dalendar/: api.py  token.py
app/services/website/: bright_talk.py  isc2.py
app/tasks/: add.py  beat.py  browser.py  user.py
app/utils/: db.py
config/: rabbitmq.conf
docker/: beat.Dockerfile  worker.Dockerfile
tests/celery/: test_celery.py
tests/rabbit/: conftest.py  test_rabbit.py
tests/services/: test_google_calendar.py  test_google_calnder.py
