[tool.poetry]
name = "rabbit-celery"
version = "0.1.0"
description = ""
authors = ["tiaz0128 <tiaz0128.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["librabbitmq"], version = "^5.4.0"}
pika = "^1.3.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"
pydantic = "^2.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
