[tool.poetry]
name = "rabbit-celery"
version = "0.1.0"
description = ""
authors = ["tiaz0128 <tiaz0128.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["librabbitmq"], version = "^5.4.0"}
pika = "^1.3.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"
pydantic = "^2.7.2"
google-api-python-client = "^2.131.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
playwright = "^1.44.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
pytest-playwright = "^0.5.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
